--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -20,6 +20,8 @@ alembic = "^1.11.1"
 ruff = "^0.0.278"
 psycopg2-binary = "^2.9.6"
 isort = "^5.12.0"
+pytest = "^7.4.0"
+pytest-postgresql = "^5.0.0"
 
 
 [build-system]
