--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -22,6 +22,8 @@ psycopg2-binary = "^2.9.6"
 isort = "^5.12.0"
 pytest = "^7.4.0"
 pytest-postgresql = "^5.0.0"
+factory-boy = "^3.3.0"
+faker-biology = "^0.6.0"
 
 
 [build-system]
