--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^7.4.0"
 pytest-postgresql = "^5.0.0"
 factory-boy = "^3.3.0"
 faker-biology = "^0.6.0"
+sgqlc = "^16.3"
 
 
 [build-system]
