--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^7.4.0"
 pytest-postgresql = "^5.0.0"
 factory-boy = "^3.3.0"
 faker-biology = "^0.6.0"
+pytest-asyncio = "^0.21.1"
 
 
 [build-system]
@@ -76,3 +77,8 @@ target-version = "py311"
 [tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
+
+[tool.pytest.ini_options]
+markers = [
+    "asyncio",
+]
