add workflow runner plugins

--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -16,7 +16,7 @@ x-db-variables: &db-variables
 
 services:
   postgres:
-    platform: linux/amd64
+    platform: linux/arm64
     image: postgres:15
     restart: always
     ports:
