--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^7.4.0"
 pytest-postgresql = "^5.0.0"
 factory-boy = "^3.3.0"
 faker-biology = "^0.6.0"
+boto3 = "^1.28.12"
 
 
 [build-system]
