--- a/entities/Dockerfile
+++ b/entities/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-slim-bookworm AS build
 RUN apt-get update && \
-    apt-get install -y vim wget nginx nginx-extras procps ripgrep make gcc postgresql-15 && \
+    apt-get install -y vim wget nginx nginx-extras procps ripgrep make gcc && \
     apt-get clean
 
 ENV POETRY_VERSION=1.5
