--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -18,14 +18,14 @@ gunicorn = "^21.2.0"
 asyncpg = "^0.28.0"
 alembic = "^1.11.1"
 ruff = "^0.0.278"
-psycopg2-binary = "^2.9.6"
 isort = "^5.12.0"
 pytest = "^7.4.0"
 pytest-postgresql = "^5.0.0"
 factory-boy = "^3.3.0"
 faker-biology = "^0.6.0"
+sgqlc = "^16.3"
 pytest-asyncio = "^0.21.1"
-
+psycopg-binary = "^3.1.9"
 
 [build-system]
 requires = ["poetry-core"]
