--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -16,7 +16,7 @@ x-db-variables: &db-variables
 
 services:
   postgres:
-    platform: linux/amd64
+    platform: linux/arm64
     image: postgres:15
     restart: always
     ports:
@@ -47,8 +47,37 @@ services:
     command: uvicorn main:app --reload --host 0.0.0.0 --port 8042
     environment:
       <<: [*aws-variables, *db-variables]
+  motoserver:
+    profiles: ["moto"]
+    container_name: motoserver
+    image: motoserver/moto:3.0.4
+    environment:
+      - MOTO_DOCKER_NETWORK_NAME=czidnet
+      - MOTO_DOCKER_NETWORK_MODE=overlay
+    ports:
+      - "9000:5000"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    networks:
+      czidnet:
+        aliases:
+          - czidnet
+  stepfunctions_local:
+    profiles: ["moto"]
+    container_name: stepfunctions_local
+    image: amazon/aws-stepfunctions-local
+    environment:
+      - BATCH_ENDPOINT=http://czidnet:5000
+      - LAMBDA_ENDPOINT=http://czidnet:5000
+      - AWS_ACCOUNT_ID=123456789012
+    ports:
+      - "8083:8083"
+    networks:
+      czidnet:
+        aliases:
+          - sfn.czidnet
 networks:
-  default:
+  czidnet:
     name: czidnet
     driver: overlay
     attachable: true
