Move files around.

--- a/entities/docker-compose.yml
+++ b/entities/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "3592:3592"
       - "3593:3593"
     volumes:
-      - ./policy:/policies
+      - ./cerbos/policies:/policies
   entities:
     image: "platformics-entities"
     platform: linux/arm64
