--- a/entities/docker-compose.yml
+++ b/entities/docker-compose.yml
@@ -17,6 +17,14 @@ services:
       # directory as its storage location instead so it works with our db snapshot
       # workflow.
       - PGDATA=/var/lib/platformics/data
+  cerbos:
+    image: ghcr.io/cerbos/cerbos:0.29.0
+    ports:
+      - "3592:3592"
+      - "3593:3593"
+    volumes:
+      - ./cerbos/policies:/policies
+      - ./cerbos/test:/test
   entities:
     image: "platformics-entities"
     platform: linux/arm64
