--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -28,6 +28,9 @@ pytest-asyncio = "^0.21.1"
 psycopg-binary = "^3.1.9"
 httpx = "^0.24.1"
 cerbos = "^0.10.0"
+pydantic = "^2.1.1"
+pydantic-settings = "^2.0.2"
+jwcrypto = "^1.5.0"
 
 [build-system]
 requires = ["poetry-core"]
