--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -31,6 +31,7 @@ cerbos = "^0.10.0"
 pydantic = "^2.1.1"
 pydantic-settings = "^2.0.2"
 jwcrypto = "^1.5.0"
+black = "^23.7.0"
 
 [build-system]
 requires = ["poetry-core"]
