--- a/entities/cerbos/config/config.yaml
+++ b/entities/cerbos/config/config.yaml
@@ -1,3 +1,6 @@
+# This is so Cerbos complains if our principal object format doesn't meet the expected shape.
+# Unfortunately, the "plan" code path we use doesn't seem to enforce this properly.
+# The cerbos tests do, at least, so it's not entirely useless.
 ---
 server:
   httpListenAddr: ":3592"
