--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -32,6 +32,7 @@ pydantic = "^2.1.1"
 pydantic-settings = "^2.0.2"
 jwcrypto = "^1.5.0"
 black = "^23.7.0"
+uuid6 = "^2023.5.2"
 
 [build-system]
 requires = ["poetry-core"]
