--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -33,6 +33,7 @@ pydantic-settings = "^2.0.2"
 jwcrypto = "^1.5.0"
 black = "^23.7.0"
 uuid6 = "^2023.5.2"
+mypy = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
