--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -34,6 +34,7 @@ jwcrypto = "^1.5.0"
 black = "^23.7.0"
 uuid6 = "^2023.5.2"
 mypy = "^1.5.1"
+types-requests = "^2.31.0.2"
 
 [build-system]
 requires = ["poetry-core"]
