--- a/.github/workflows/entities-push-tests.yml
+++ b/.github/workflows/entities-push-tests.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Lint Python
+        working-directory: ./entities
         run: |
           # Build images and run linters
           make local-build
@@ -24,6 +25,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Run tests
+        working-directory: ./entities
         run: |
           # Set up a local dev env and run tests
           make local-init
