--- a/.github/workflows/entities-push-tests.yml
+++ b/.github/workflows/entities-push-tests.yml
@@ -15,6 +15,7 @@ jobs:
   py-lint:
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v3.5.3
       - name: Lint Python
         working-directory: entities
         run: |
@@ -24,6 +25,7 @@ jobs:
   py-test:
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v3.5.3
       - name: Run tests
         working-directory: entities
         run: |
