--- a/entities/Makefile
+++ b/entities/Makefile
@@ -85,6 +85,7 @@ local-update-deps: ## Update poetry.lock to reflect pyproject.toml file changes.
 .PHONY: local-tests
 local-tests: ## Run entities tests
 	$(docker_compose) run entities bash -c "poetry run pytest -s"
+	$(MAKE) cerbos-tests
 
 .PHONY: local-gqlschema
 local-gqlschema: ## Export this app's GQL schema.
