--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -43,6 +43,16 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 120
 
+[tool.mypy]
+explicit_package_bases = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+exclude = [
+  "thirdparty",
+  "gql_schema.py",
+]
+mypy_path = "/czid-platformics"
+
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
 select = ["E", "F"]
