--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -35,6 +35,7 @@ black = "^23.7.0"
 uuid6 = "^2023.5.2"
 mypy = "^1.5.1"
 types-requests = "^2.31.0.2"
+alembic-postgresql-enum = "^0.1.5"
 
 [build-system]
 requires = ["poetry-core"]
