--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -16,7 +16,6 @@ x-db-variables: &db-variables
   
 services:
   postgres:
-    platform: linux/arm64
     image: postgres:15
     restart: always
     ports:
@@ -45,9 +44,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8042:8042
+      - 8000:8000
     stdin_open: true # Helps with pdb
     tty: true # Helps with pdb
-    command: uvicorn main:app --reload --host 0.0.0.0 --port 8042
+    # command: uvicorn main:app --reload --host 0.0.0.0 --port 8042
+    command: strawberry server main
     environment:
       <<: [*aws-variables, *db-variables]
       LOCAL_RUNNER_FOLDER: ${PWD}/test_workflows
