--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -25,6 +25,7 @@ pytest-postgresql = "^5.0.0"
 factory-boy = "^3.3.0"
 faker-biology = "^0.6.0"
 boto3 = "^1.28.12"
+semver = "^3.0.1"
 
 
 [build-system]
