--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -44,11 +44,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8042:8042
-      - 8000:8000
     stdin_open: true # Helps with pdb
     tty: true # Helps with pdb
-    # command: uvicorn main:app --reload --host 0.0.0.0 --port 8042
-    command: strawberry server main
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 8042
     environment:
       <<: [*aws-variables, *db-variables]
       LOCAL_RUNNER_FOLDER: ${PWD}/test_workflows
