--- a/entities/Makefile
+++ b/entities/Makefile
@@ -119,6 +119,7 @@ local-mypy: ## Run type checking
 update-cli:  ## Update the GQL types used by the CLI
 	$(docker_compose) exec entities python3 -m sgqlc.introspection --exclude-deprecated --exclude-description http://localhost:8008/graphql api/schema.json
 	$(docker_compose) exec entities sgqlc-codegen schema api/schema.json cli/gql_schema.py
+	cp cli/gql_schema.py ../workflows/entity_gql_schema.py
 
 ### GitHub Actions ###################################################
 .PHONY: gha-setup
