--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.8"
 
+include:
+  - entities/docker-compose.yml
+  - workflows/docker-compose.yml
+
 services:
   localstack:
     image: localstack/localstack:2.2.0
@@ -13,3 +17,10 @@ services:
       - ".volume:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "./bin/init_aws.sh:/etc/localstack/init/ready.d/init-aws.sh"  # ready hook
+
+networks:
+  default:
+    name: czidnet
+    driver: overlay
+    attachable: true
+    external: true
