--- a/workflows/Dockerfile
+++ b/workflows/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.11-slim-bookworm
 
 RUN apt-get update && \
     apt-get install -y \
-      python3-pip \
-      postgresql-15
+      python3-pip
 
 ENV POETRY_VERSION=1.5
 # Some base python dependencies to kickstart our container build.
