Tweaks for docker networks.

--- a/.github/workflows/entities-push-tests.yml
+++ b/.github/workflows/entities-push-tests.yml
@@ -28,9 +28,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       # Set up a local dev env and run tests
+      - name: Set up deps
+        run: |
+          make gha-setup
       - name: Run tests
         working-directory: entities
         run: |
-          make gha-setup
           make local-init
           make local-tests
