--- a/entities/Makefile
+++ b/entities/Makefile
@@ -24,7 +24,7 @@ rm-pycache: ## remove all __pycache__ files (run if encountering issues with pyc
 ### DOCKER LOCAL DEV #########################################
 .PHONY: local-setup
 local-setup: ## Load db tables and seed data
-	while [ -z "$$($(docker_compose) exec -T postgres psql $(LOCAL_DB_CONN_STRING) -c 'select 1')" ]; do echo "waiting for db to start..."; sleep 1; done;
+	while [ -z "$$($(docker_compose) exec -T entities-db psql $(LOCAL_DB_CONN_STRING) -c 'select 1')" ]; do echo "waiting for db to start..."; sleep 1; done;
 	$(docker_compose) run entities alembic upgrade head
 	$(MAKE) local-seed
 
@@ -119,6 +119,7 @@ local-mypy: ## Run type checking
 update-cli:  ## Update the GQL types used by the CLI
 	$(docker_compose) exec entities python3 -m sgqlc.introspection --exclude-deprecated --exclude-description http://localhost:8008/graphql api/schema.json
 	$(docker_compose) exec entities sgqlc-codegen schema api/schema.json cli/gql_schema.py
+	cp cli/gql_schema.py ../workflows/entity_gql_schema.py
 
 ### GitHub Actions ###################################################
 .PHONY: gha-setup
