--- a/workflows/Dockerfile
+++ b/workflows/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.11-slim-bookworm
 
 RUN apt-get update && \
     apt-get install -y \
-      python3-pip \
-      postgresql-15
+      python3-pip
 
 ENV POETRY_VERSION=1.5
 # Some base python dependencies to kickstart our container build.
@@ -16,8 +15,8 @@ WORKDIR /workflows
 
 ENV PYTHONPATH=.
 
+COPY pyproject.toml poetry.lock ./
+RUN poetry install
 COPY . ./
 
-RUN poetry install
-
-RUN pip install  plugins/*/*
+RUN pip install plugins/*/*
