--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
 version: "3.8"
 
 services:
-  localstack:
-    image: localstack/localstack:2.2.0
+  # Mock boto with persistence.
+  # To use it from the CLI: aws --endpoint-url=http://localhost:3000 s3 ls
+  # To reset all services without restarting the container: curl -X POST http://localhost:3000/moto-api/reset
+  motoserver:
+    image: motoserver/moto:latest
     ports:
-      - "127.0.0.1:4566:4566"            # LocalStack Gateway
-      - "127.0.0.1:4510-4559:4510-4559"  # External services port range
+      - "4000:4000"
     environment:
-      - DOCKER_HOST=unix:///var/run/docker.sock
-      - S3_BUCKET_DEV=s3://local-bucket
-    volumes:
-      - ".volume:/var/lib/localstack"
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "./bin/init_aws.sh:/etc/localstack/init/ready.d/init-aws.sh"  # ready hook
+      - MOTO_PORT=4000 # set moto listener port with env var
 
 networks:
   default:
