--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   # To use it from the CLI: aws --endpoint-url=http://localhost:4000 s3 ls
   # To reset all services without restarting the container: curl -X POST http://localhost:4000/moto-api/reset
   motoserver:
-    image: motoserver/moto:latest
+    image: motoserver/moto:4.2.2
     ports:
       - "4000:4000"
     environment:
