--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -28,6 +28,9 @@ boto3 = "^1.28.12"
 semver = "^3.0.1"
 sgqlc = "^16.3"
 psycopg-binary = "^3.1.10"
+cerbos = "^0.10.1"
+jwcrypto = "^1.5.0"
+pydantic-settings = "^2.0.3"
 
 
 [build-system]
