--- a/workflows/cerbos/policies/workflows.yaml
+++ b/workflows/cerbos/policies/workflows.yaml
@@ -4,17 +4,13 @@ resourcePolicy:
   version: "default"
   importDerivedRoles:
     - common_roles
-  resource: "workflow_run"
+  resource: "workflow"
   rules:
-    - actions: ['*']
+    - actions: ['view']
       effect: EFFECT_ALLOW
-      derivedRoles:
-        - project_member
+      roles:
+        - user
 
-    - actions: ['delete']
-      effect: EFFECT_ALLOW
-      derivedRoles:
-        - owner
   schemas:
     principalSchema:
       ref: cerbos:///principal.json
