--- a/entities/Makefile
+++ b/entities/Makefile
@@ -87,10 +87,6 @@ local-tests: ## Run entities tests
 	$(docker_compose) run entities bash -c "poetry run pytest -s"
 	$(MAKE) cerbos-tests
 
-.PHONY: local-gqlschema
-local-gqlschema: ## Export this app's GQL schema.
-	$(docker_compose) run entities strawberry export-schema api.main:schema > api/schema.graphql
-
 .PHONY: local-token
 local-token: ## Copy an auth token for this local dev env to the system clipboard
 	TOKEN=$$($(docker_compose) run entities ./cli/gqlcli.py auth generate-token 111 --project 444:admin --expiration 99999); echo '{"Authorization":"Bearer '$$TOKEN'"}' | tee >(pbcopy)
@@ -115,8 +111,9 @@ check-lint: ## Check for bad linting
 local-mypy: ## Run type checking
 	$(docker_compose) exec entities mypy .
 
-.PHONY: update-cli
-update-cli:  ## Update the GQL types used by the CLI
+.PHONY: codegen
+codegen:  ## Update the GQL types used by the CLI
+	$(docker_compose) run entities strawberry export-schema api.main:schema > api/schema.graphql
 	$(docker_compose) exec entities python3 -m sgqlc.introspection --exclude-deprecated --exclude-description http://localhost:8008/graphql api/schema.json
 	$(docker_compose) exec entities sgqlc-codegen schema api/schema.json cli/gql_schema.py
 	cp cli/gql_schema.py ../workflows/entity_gql_schema.py
